--- a/client-person-microservice/src/main/resources/application.yml
+++ b/client-person-microservice/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
   application:
     name: client-person-microservice
   datasource:
-    username: postgres.cpnpasztdwperymygkiv
-    password: 9yEjHQZib03acNTM
-    url: jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres?prepareThreshold=0
+    username: devuser
+    password: devpassword
+    url: jdbc:postgresql://192.168.0.6:5432/devdb
   jpa:
     hibernate:
       ddl-auto: update
