--- a/client-person-microservice/src/main/resources/application.yml
+++ b/client-person-microservice/src/main/resources/application.yml
@@ -2,14 +2,14 @@ server:
   port: 8080
 spring:
   kafka:
-    bootstrap-servers: 192.168.0.6:29092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:192.168.0.6:29092}
   application:
     name: client-person-microservice
   datasource:
-    username: devuser
-    password: devpassword
-    url: jdbc:postgresql://192.168.0.6:5432/devdb
+    username: ${DB_USERNAME:devuser}
+    password: ${DB_PASSWORD:devpass}
+    url: ${DB_URL:jdbc:postgresql://192.168.0.6:5432/devdb}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: ${HIBERNATE_DDL_AUTO:update}
     database-platform: org.hibernate.dialect.PostgreSQLDialect
